<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EDE7F6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:drawableLeft="@drawable/main_logo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/logo"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textSize="60sp"
            android:textColor="#333333"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/input"
                android:id="@+id/loginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_prompt"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameWrapper"
            >

            <android.support.v7.widget.AppCompatEditText
                style="@style/input"
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_prompt"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in"
            style="@style/button"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:text="@string/login_button"/>

        <TextView
            android:id="@+id/link_signup"
            android:layout_marginTop="14dp"
            style="@style/secondaryText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>